--- a/get_next_line/Makefile
+++ b/get_next_line/Makefile
@@ -1,27 +1,26 @@
-# Compiler and flags
 CC      = cc
 CFLAGS  = -g -Wall -Wextra -Werror
+AR      = ar rcs
+RM      = rm -f
 
-# Files
 NAME    = get_next_line.a
 SRCS    = get_next_line.c get_next_line_utils.c
 OBJS    = $(SRCS:.c=.o)
 HEADER  = get_next_line.h
 
-# Rules
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	ar rcs $(NAME) $(OBJS)
+	@$(AR) $(NAME) $(OBJS)
 
 %.o: %.c $(HEADER)
-	$(CC) $(CFLAGS) -c $< -o $@
+	@$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f $(OBJS)
+	@$(RM) $(OBJS)
 
 fclean: clean
-	rm -f $(NAME)
+	@$(RM) $(NAME)
 
 re: fclean all
 
